--- a/spotify/index.html
+++ b/spotify/index.html
@@ -2,14 +2,29 @@
 <html lang="pt-br">
   <head>
     <!-- Meta tags Obrigatórias -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+      integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+      crossorigin="anonymous"
+    />
 
     <!-- HTML5Shiv -->
     <!--[if lt IE 9]>
@@ -17,18 +32,89 @@
     <![endif]-->
 
     <!-- Estilo customizado -->
-    <link rel="stylesheet" type="text/css" href="css/estilo.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 
     <title>Música para todos - Spotify</title>
+    <link
+      rel="shortcut icon"
+      href="./imagens/favicon.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
-    
-    <h1>Olá, mundo!</h1>
+    <header>
+      <nav class="navbar navbar-expand-md navbar-light fixed-top bg-black">
+        <div class="container">
+          <a href="#" class="navbar-brand">
+            <img src="./imagens/spotify.svg" width="142" />
+          </a>
+          <button
+            class="navbar-toggler btn-light"
+            data-bs-toggle="collapse"
+            data-bs-target="#nav-principal"
+          >
+            <i class="fas fa-bars text-white"></i>
+          </button>
 
+          <div
+            class="collapse navbar-collapse justify-content-end"
+            id="nav-principal"
+          >
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a href="" class="nav-link">Premium</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Ajuda</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Baixar</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Increver-se</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="btn btn-outline-light ml-4">Entrar</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
     <!-- JavaScript (Opcional) -->
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
